# AppWaffle

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json
.claude/: settings.local.json
.claude/commands/: commit.md
.claude/skills/commit/: skill.md
.claude/skills/react/: PATTERNS.md  SKILL.md
.claude/skills/rust/: skill.md
.claude/skills/tailwind/: PATTERNS.md  SKILL.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_discovery.rs  commands.rs  config.rs  icon_cache.rs  lib.rs  main.rs  window.rs
src/components/: AppGrid.tsx  AppIcon.tsx  AppItem.tsx  AppWaffle.tsx  ErrorBoundary.tsx  FolderIcon.tsx  FolderItem.tsx  FolderModal.tsx  SortableItem.tsx
src/components/items/: AppItem.tsx  AppItemOverlay.tsx  DropTarget.tsx  FolderItem.tsx  FolderItemOverlay.tsx
src/components/ui/: Container.tsx  Icon.tsx  Label.tsx
src/constants/: dnd.ts
src/contexts/: ConfigContext.tsx  config.ts
src/hooks/: useApps.ts  useCloseAnimation.ts  useConfig.ts  useDelayedSorting.ts  useDragGrid.ts  useDragHandoff.ts  useFolderCreation.ts  useFolderOperations.ts  useFolders.ts  useGrid.ts  useGridData.ts  useLatestRef.ts  useOrderPersistence.ts  useSortableGrid.ts  useVirtualFolders.ts
src/lib/: appsApi.ts
src/lib/dnd/: DragEngine.ts  GhostElement.ts  GridTransforms.ts  PointerTracker.ts  README.md  SlotDetection.ts  index.ts  types.ts
src/lib/helper-dnd/: DragCoordinator.ts  DragEngine.ts  GhostElement.ts  PointerTracker.ts  README.md  (+2 more)
src/types/: app.ts
src/utils/: appUtils.ts  folderUtils.ts  iconUtils.ts
